--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="jumbotron">
- <h1>{{title}}</h1>
-</div>
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <h1>{{title}}</h1>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" [routerLink]="['/home']">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" [routerLink]="['/products']">ProductsList</a>
+  </li>
+</ul>
 
-<app-product-list></app-product-list>
+<router-outlet></router-outlet>
