--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -28,8 +28,8 @@
 </div>
 
 <div class="table-responsive">
-<table class="table">
-  <thead>
+<table class="table table-bordered" >
+  <thead class="thead-dark">
     <tr>
       <th>Image</th>
       <th>ProductName</th>
@@ -44,7 +44,7 @@
       <td><img [src]="product.productImage" alt="{{product.productName}}" *ngIf="imageStatus" [style.width.px]="width"></td>
       <td>{{product.productName}}</td>
       <td>{{product.productCode | converToSpaces :'-'}}</td>
-      <td>{{product.productAvailable | date}}</td>
+      <td>{{product.productAvailable}}</td>
       <td>{{product.productPrice | currency}}</td>
       <td>{{product.productRating}}</td>
     </tr>
