--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -1,26 +1,44 @@
 <div class="card">
     <div class="card-header">
         <h4>Users List</h4>
+
+
+  
+
+
     </div>
+
     <div class="card-body">
+
+        <form #form="ngForm" (submit)=loadUsers()>
+            <div class="form-group">
+           <label for="">No of users to be listed</label>
+              <input type="text" #ulnt="ngModel" name="noofusers" [(ngModel)]="usersno"> 
+              <button class="btn btn-primary">Ok</button>
+            </div>
+            
+          </form>
+
      <div class="table-responsive">
-     <table class="table">
-          <thead>
+     <table class="table table-bordered">
+          <thead class="thead-dark">
           <tr>
             <th>Image</th>
             <th>Name</th>
             <th>Gender</th>
-            <th>email</th>
+            <th>Email</th>
+             <th>Phone</th>
           </tr>
 
           </thead>
 
           <tbody>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+            <tr *ngFor="let client of clients">
+              <td><a [href]="client.picture.large"><img [src]="client.picture.thumbnail" alt=""></a></td>
+              <td>{{client.name.first | uppercase}}</td>
+              <td>{{client.gender | uppercase}}</td>
+              <td>{{client.email}}</td>
+              <td>{{client.phone}}</td>
             </tr>
 
           </tbody>
